implement updateExpirationTime()