@@ -94,3 +94,11 @@ tasks.register('runBackup', JavaExec) {
     mainClass = 'com.nautilus_technologies.tsubakuro.examples.datastore.Main'
     jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED']
 }
+
+tasks.register('runUpdateExpirationTime', JavaExec) {
+    dependsOn ':ipc:assemble'
+    classpath = sourceSets.main.runtimeClasspath
+    systemProperty 'java.library.path', "$project.projectDir/../ipc/src/main/native/build/src"
+    mainClass = 'com.nautilus_technologies.tsubakuro.examples.updateExpirationTime.Main'
+    jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED']
+}
